--- a/_posts/2011-05-31-fedora-15-tips.markdown
+++ b/_posts/2011-05-31-fedora-15-tips.markdown
@@ -45,6 +45,19 @@ fastest mirror plug-in. You can install it like this:
 $ sudo yum install yum-plugin-fastestmirror
 {% endhighlight %}
 
+**Disable SELinux**
+
+If you're a desktop Linux user you want to disable SELinux - trust
+me. Open the file /etc/selinux/config and change this line:
+
+`SELINUX=enforcing`
+
+to
+
+`SELINUX=disabled`
+
+Restart afterwards.
+
 # Install additional software
 
 Fedora's default installation medium is a 700MB CD. It's
@@ -111,6 +124,15 @@ If you're planning to do some Java development:
 
 {% highlight console %}
 $ sudo yum install java-1.6.0-openjdk-devel java-1.6.0-openjdk-javadoc java-1.6.0-openjdk-src
+{% endhighlight %}
+
+**Install Deluge torrent client**
+
+The default Transmission torrent client is pretty basic. I recommend
+you to replace it with the much more feature-rich deluge:
+
+{% highlight console %}
+$ sudo yum install deluge
 {% endhighlight %}
 
 # Install additional patent encumbered/proprietary software
